--- a/.env
+++ b/.env
@@ -9,3 +9,5 @@ DB_PORT=5432
 
 EMAIL_HOST_USER=ayanjkeewow@gmail.com
 EMAIL_HOST_PASSWORD=uvdgzqvuvnzgpath
+
+BACKEND_URL=https://diplomatch-tiizx.kinsta.app/
