--- a/.env
+++ b/.env
@@ -10,4 +10,4 @@ DB_PORT=5432
 EMAIL_HOST_USER=ayanjkeewow@gmail.com
 EMAIL_HOST_PASSWORD=uvdgzqvuvnzgpath
 
-BACKEND_URL=https://diplomatch-tiizx.kinsta.app/
+BACKEND_URL=https://diplomatch-tiizx.kinsta.app
