--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -10,7 +10,10 @@
     "noUnusedLocals": true,
     "noUnusedParameters": true,
     "noFallthroughCasesInSwitch": true,
-    "noUncheckedSideEffectImports": true
+    "noUncheckedSideEffectImports": true,
+
+    "baseUrl": ".",                          // 🆕
+    "paths": { "@/*": ["src/*"] }            // 🆕
   },
   "include": ["src/**/*.ts", "src/**/*.tsx", "src/**/*.vue", "src/**/*.js"]
 }
