--- a/.env
+++ b/.env
@@ -7,7 +7,8 @@ DB_PASSWORD=ayanjkee24bro
 DB_HOST=localhost
 DB_PORT=5432
 
-EMAIL_HOST_USER=ayanjkeewow@gmail.com
-EMAIL_HOST_PASSWORD=uvdgzqvuvnzgpath
+# SendGrid email API key
+SENDGRID_API_KEY=UV2DUHA6UKQUS6S485GFC5FK
 
-
+# Кто будет указан как отправитель
+DEFAULT_FROM_EMAIL=ayanjkeewow@gmail.com
